--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     compile 'com.android.support:support-v4:25.0.0'
     compile 'com.android.support:cardview-v7:25.0.+'
     compile 'com.android.support:recyclerview-v7:25.0.+'
+    compile 'com.crystal:crystalrangeseekbar:1.0.0'
 
     testCompile 'junit:junit:4.12'
 }
