--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "biyeta.nas.biyeta"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 25
         versionCode 1
         versionName "1.0"
@@ -33,6 +33,9 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.0.+'
     compile 'com.android.support:recyclerview-v7:25.0.+'
     compile 'com.crystal:crystalrangeseekbar:1.0.0'
+    compile 'com.github.jetradarmobile:android-snowfall:1.1.6'
+    compile 'com.squareup.okhttp:okhttp:2.5.0'
+
 
     testCompile 'junit:junit:4.12'
 }
