--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,10 @@ dependencies {
     compile 'com.android.support:support-v4:25.0.0'
     compile 'com.android.support:cardview-v7:25.0.+'
     compile 'com.android.support:recyclerview-v7:25.0.+'
-    compile 'com.crystal:crystalrangeseekbar:1.0.0'
     compile 'com.github.jetradarmobile:android-snowfall:1.1.6'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
+
+    compile 'me.bendik.simplerangeview:simplerangeview:0.1.1'
 
 
     testCompile 'junit:junit:4.12'
