--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashScreen">
+        <activity android:name=".Search_Filter">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -24,6 +24,9 @@
         <activity
             android:name=".LoginTest"
             android:label="@string/title_activity_login" ></activity>
+
+        <!--<activity android:name=".Search_Filter"-->
+            <!--&gt;</activity>-->
     </application>
 
 </manifest>
