"lazy loading intrigated"

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,8 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.0.+'
     compile 'com.github.jetradarmobile:android-snowfall:1.1.6'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
-
     compile 'me.bendik.simplerangeview:simplerangeview:0.1.1'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 
 
     testCompile 'junit:junit:4.12'
