--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,14 +18,7 @@ android {
         }
     }
 
-    productFlavors{
-        development {
 
-        }
-        staging {
-
-        }
-    }
 }
 
 dependencies {
@@ -45,6 +38,7 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'me.bendik.simplerangeview:simplerangeview:0.1.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.android.support:customtabs:25.1.0'
 
 
     testCompile 'junit:junit:4.12'
