--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,26 +12,26 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplashScreen">
+        <activity android:name=".activity.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".HomeScreen"
+            android:name=".activity.HomeScreen"
             android:label="@string/title_activity_home_screen"
             android:theme="@style/MyMaterialTheme" />
         <activity
-            android:name=".LoginTest"
+            android:name=".activity.Login"
             android:label="@string/title_activity_login"></activity>
-        <activity android:name=".Profile_View"></activity>
-        <activity android:name=".Search_Filter"></activity>
+        <activity android:name=".activity.Profile_View"></activity>
+        <activity android:name=".activity.Search_Filter"></activity>
 
         <!--<activity android:name=".Search_Filter"-->
         <!--&gt;</activity>-->
         <activity
-            android:name=".UserProfileActivity"
+            android:name=".activity.UserProfileActivity"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"></activity>
 
     </application>
