--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         <!--&gt;</activity>-->
         <activity
             android:name=".activity.UserProfileActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar.FullScreen"></activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
     </application>
 
