--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
         <activity
             android:name="com.nascenia.biyeta.activity.Login"
             android:label="@string/title_activity_login"></activity>
-        <activity android:name="com.nascenia.biyeta.activity.Search_Filter"></activity>
+        <activity android:name="com.nascenia.biyeta.activity.Search_Filter"
+            android:theme="@style/AppTheme.NoActionBar"
+            ></activity>
 
         <!--<activity android:name=".Search_Filter"-->
         <!--&gt;</activity>-->
