prepare json response string

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,7 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:customtabs:25.0.1'
     compile 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
+    compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'org.apache.commons:commons-collections4:4.1'
     testCompile 'junit:junit:4.12'
 }
