--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,9 +40,15 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.0.+'
     compile 'com.android.support:recyclerview-v7:25.0.+'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.0'
     compile 'me.bendik.simplerangeview:simplerangeview:0.1.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:customtabs:25.0.1'
     compile 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
+
+    compile 'org.apache.commons:commons-lang3:3.4'
+    compile 'org.apache.commons:commons-collections4:4.1'
+
+
     testCompile 'junit:junit:4.12'
 }
