--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nascenia.biyeta">
 
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
@@ -12,9 +12,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name="com.nascenia.biyeta.activity.SplashScreen">
+        <activity android:name=".activity.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -23,22 +24,24 @@
             android:label="@string/title_activity_home_screen"
             android:theme="@style/AppTheme" />
         <activity
-            android:name="com.nascenia.biyeta.activity.Login"
-            android:label="@string/title_activity_login"></activity>
+            android:name=".activity.Login"
+            android:label="@string/title_activity_login" />
         <activity
-            android:name="com.nascenia.biyeta.activity.Search_Filter"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:name=".activity.Search_Filter"
+            android:theme="@style/AppTheme.NoActionBar" />
 
-        <!--<activity android:name=".Search_Filter"-->
-        <!--&gt;</activity>-->
+        <!-- <activity android:name=".Search_Filter" -->
+        <!-- &gt;</activity> -->
         <activity
             android:name=".activity.UserProfileActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.NewUserProfileActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".activity.SendRequestActivity"
+            android:label="@string/title_activity_send_request"
+            android:theme="@style/TabAppTheme"></activity>
     </application>
 
 </manifest>
