--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,11 @@
             android:name=".activity.NewUserProfileActivity"
             android:theme="@style/AppTheme.NoActionBar"></activity>
 
+        <activity android:name=".activity.InboxSingleChat"
+            android:theme="@style/AppTheme"></activity>
+        <activity android:name=".activity.InboxListView"
+            android:theme="@style/AppTheme"></activity>
+
     </application>
 
 </manifest>
