fix the issue of set_request_to_me_from_other

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,13 +55,26 @@
         <activity
             android:name=".activity.LowsAndTerms"
             android:theme="@style/AppTheme" />
-            android:theme="@style/AppTheme.NoActionBar" />
+        android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.SendRequestActivity"
             android:label="@string/title_activity_send_request"
             android:theme="@style/TabAppTheme" />
-        <activity android:name=".activity.RequestSentFromMe"
-            android:theme="@style/AppTheme"/>
+        <activity
+            android:name=".activity.RequestSentFromMe"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.TermOfUse"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.ContactUs"
+            android:theme="@style/AppTheme"
+            android:windowSoftInputMode="adjustResize" />
+        <activity
+            android:name=".activity.PaymentActivity"
+
+            android:theme="@style/AppTheme" />
+
     </application>
 
 </manifest>
