mobile verification added

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,11 +48,7 @@ dependencies {
 
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.apache.commons:commons-collections4:4.1'
-  //  compile 'net.rimoto:intlphoneinput:1.0.1'
-
-
-
-
-
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'net.rimoto:intlphoneinput:1.0.1'
     testCompile 'junit:junit:4.12'
 }
