--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -74,6 +74,9 @@
             android:name=".activity.PaymentActivity"
 
             android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.MobileVerification"
+            android:label="@string/title_activity_login" />
 
     </application>
 
