mobile verification add in manifests file null check for expired list

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,6 +79,9 @@
         <activity
             android:name=".activity.FAQActivity"
             android:theme="@style/AppTheme" />
+        <activity
+            android:name=".activity.MobileVerification"
+            android:theme="@style/AppTheme" />
 
 
     </application>
