implement own user profile feature

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,5 @@ dependencies {
     compile 'net.rimoto:intlphoneinput:1.0.1'
     testCompile 'junit:junit:4.12'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+    compile "me.henrytao:smooth-app-bar-layout:24.1.0.0"
 }
