--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,10 +37,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
+
+
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:design:25.0.1'
-
-
     compile 'com.github.bumptech.glide:glide:3.5.2'
     compile 'com.android.support:support-v4:25.0.0'
     compile 'com.android.support:cardview-v7:25.0.1'
@@ -59,8 +59,8 @@ dependencies {
     compile 'me.henrytao:smooth-app-bar-layout:24.1.0.0'
     compile 'com.google.android.gms:play-services-analytics:10.2.4'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    //compile 'com.google.firebase:firebase-core:9.0.2'
     compile 'com.google.firebase:firebase-messaging:10.2.4'
+    compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
