--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,10 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nascenia.biyeta">
 
+    <user-feature
+        android:name="android.hardware.Camera2"
+        android:required="false" />
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -179,9 +183,11 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.PopUpFamilyInfoSecondPage"
-            android:theme="@style/AppTheme.NoActionBarPopUp"></activity>
-        <activity android:name=".activity.RegistrationChoiceSelectionSecondPage"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBarPopUp" />
+        <activity
+            android:name=".activity.RegistrationChoiceSelectionSecondPage"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activity.ImageUpload"></activity>
     </application>
 
 </manifest>
