--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,6 +60,8 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-messaging:10.2.4'
     compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
+    compile 'com.github.chrisbanes:PhotoView:1.3.1'
+    compile 'com.github.yalantis:ucrop:2.2.1-native'
     testCompile 'junit:junit:4.12'
 }
 apply plugin: 'com.google.gms.google-services'
