--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,7 +49,8 @@
         <activity
             android:name=".activity.Login"
             android:label="@string/title_activity_login"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateHidden|adjustResize"/>
         <activity
             android:name=".activity.Search_Filter"
             android:screenOrientation="portrait"
@@ -159,7 +160,9 @@
         <activity
             android:name=".activity.RegistrationFirstActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="stateHidden|adjustResize"/>
+
         <activity android:name=".activity.ImageChoose"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar"/>
