--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,17 +2,19 @@ apply plugin: 'com.android.application'
 
 
 android {
-    compileSdkVersion 25
-    buildToolsVersion '25.0.2'
+    compileSdkVersion 26
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId 'com.nascenia.biyeta'
         minSdkVersion 16
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 4
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    flavorDimensions "default"
     buildTypes {
         release {
             minifyEnabled false
@@ -27,7 +29,7 @@ android {
         }
     }
     dexOptions {
-        incremental = true;
+       // incremental = true;
         preDexLibraries = false
         javaMaxHeapSize "2g"
     }
@@ -39,17 +41,17 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
-    compile 'com.android.support:appcompat-v7:25.0.1'
-    compile 'com.android.support:design:25.0.1'
-    compile 'com.github.bumptech.glide:glide:3.5.2'
-    compile 'com.android.support:support-v4:25.0.0'
-    compile 'com.android.support:cardview-v7:25.0.1'
-    compile 'com.android.support:recyclerview-v7:25.0.1'
+    compile 'com.android.support:appcompat-v7:26.1.0'
+    compile 'com.android.support:design:26.1.0'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.android.support:support-v4:26.1.0'
+    compile 'com.android.support:cardview-v7:26.1.0'
+    compile 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.squareup.okhttp:okhttp:2.5.0'
     compile 'com.google.code.gson:gson:2.8.0'
     compile 'me.bendik.simplerangeview:simplerangeview:0.1.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
-    compile 'com.android.support:customtabs:25.0.1'
+    compile 'com.android.support:customtabs:26.1.0'
     compile 'com.bignerdranch.android:expandablerecyclerview:3.0.0-RC1'
     compile 'org.apache.commons:commons-lang3:3.4'
     compile 'org.apache.commons:commons-collections4:4.1'
@@ -57,11 +59,11 @@ dependencies {
     compile 'net.rimoto:intlphoneinput:1.0.1'
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'me.henrytao:smooth-app-bar-layout:24.1.0.0'
-    compile 'com.google.android.gms:play-services-analytics:10.2.4'
+    compile 'com.google.android.gms:play-services-analytics:11.6.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.firebase:firebase-messaging:10.2.4'
+    compile 'com.google.firebase:firebase-messaging:11.6.2'
     compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
-    compile 'com.github.chrisbanes:PhotoView:1.3.1'
+    compile 'com.github.chrisbanes:PhotoView:2.1.3'
     compile 'com.github.yalantis:ucrop:2.2.1-native'
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:multidex:1.0.0'
