--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nascenia.biyeta">
 
-    <user-feature
+    <uses-feature
         android:name="android.hardware.Camera2"
         android:required="false" />
 
